фиксы, первый подход places, cover, footer

--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@
 @import url(../vendor/normalize.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/lang-links/lang-links.css);
 @import url(../blocks/lang-links/__lang-link/lang-links__lang-link.css);
 @import url(../blocks/lang-links/__lang-link/_lang/lang-links__lang-link_lang-russian.css);
@@ -18,3 +19,21 @@
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid-layout/photo-grid-layout.css);
 @import url(../blocks/photo-grid-layout/__image/photo-grid-layout__image.css);
+@import url(../blocks/places/places.css);
+@import url(../blocks/places-list/places-list.css);
+@import url(../blocks/places-list/__place/places-list__place.css);
+@import url(../blocks/places-list/__title/places-list__title.css);
+@import url(../blocks/places-list/__website/places-list__website.css);
+@import url(../blocks/places-list/__url-heading/places-list__url-heading.css);
+@import url(../blocks/places-list/__link/places-list__link.css);
+@import url(../blocks/places-list/__image/places-list__image.css);
+@import url(../blocks/places-list/__paragraph/places-list__paragraph.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/section/section.css);
