--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,5 @@
-.header{
+.footer {
   display: flex;
   justify-content: space-between;
-  height: 58px;
-  padding: 28px 48px 56px;
+  padding: 0 48px 0;
 }
