--- a/blocks/photo-grid-layout/__image/photo-grid-layout__image.css
+++ b/blocks/photo-grid-layout/__image/photo-grid-layout__image.css
@@ -1,4 +1,6 @@
 .photo-grid-layout__image {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  box-sizing: border-box;
 }
