--- a/blocks/photo-grid-layout/photo-grid-layout.css
+++ b/blocks/photo-grid-layout/photo-grid-layout.css
@@ -1,5 +1,7 @@
 .photo-grid-layout {
-  padding: 0 48px 0;
+  max-width: 1184px;
+  margin: auto;
+  padding: 0;
   list-style-type: none;
   display: grid;
   column-gap: 16px;
