--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,3 +7,12 @@
   text-align: center;
   padding-bottom: 32px;
 }
+
+@media screen and (max-width: 425px) {
+  .cover__title {
+    max-width: 288px;
+    font-size: 32px;
+    line-height: 35px;
+    padding-bottom: 16px;
+  }
+}
