--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,3 +2,24 @@
   max-width: 690px;
   padding-left: 147px;
 }
+
+@media screen and (max-width: 1180px) {
+  .intro {
+    padding-left: 48px;
+  }
+}
+
+
+@media screen and (max-width: 800px) {
+  .intro {
+    max-width: 720px;
+    padding-left: 0;
+    margin: auto;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .intro {
+    max-width: 288px;
+  }
+}
