--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,3 +3,9 @@
   font-size: 14px;
   line-height: 16px;
 }
+
+@media screen and (max-width: 425px) {
+  .footer__copyright {
+    line-height: 14px;
+  }
+}
