--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -10,3 +10,10 @@
 .footer__link:hover {
   opacity: 0.8;
 }
+
+@media screen and (max-width: 425px) {
+  .footer__link{
+    font-size: 24px;
+    line-height: 24px;
+  }
+}
