--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,3 +3,11 @@
   justify-content: space-between;
   padding: 0 48px 0;
 }
+
+@media screen and (max-width: 425px) {
+  .footer {
+    flex-direction: column;
+    gap: 48px;
+    padding: 0 16px 0;
+  }
+}
