--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,3 +4,10 @@
   height: 58px;
   padding: 28px 48px 56px;
 }
+
+@media screen and (max-width: 425px) {
+  .header{
+    height: 42px;
+    padding: 16px 16px 48px;
+  }
+}
