--- a/blocks/places-list/__place/places-list__place.css
+++ b/blocks/places-list/__place/places-list__place.css
@@ -1,5 +1,6 @@
 .places-list__place {
   display: grid;
+  margin: auto;
   column-gap: 40px;
   row-gap: 48px;
   grid-template-columns: 460px 484px;
@@ -12,4 +13,27 @@
 
 .places-list__place:last-of-type {
   padding-bottom: 0;
+}
+
+@media screen and (max-width: 1180px) {
+  .places-list__place {
+    column-gap: 32px;
+    grid-template-columns: 440px 456px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .places-list__place {
+    column-gap: 28px;
+    grid-template-columns: 340px 352px;
+  }
+}  
+
+  @media screen and (max-width: 425px) {
+    .places-list__place {
+      display: flex;
+      flex-direction: column;
+      row-gap: 32px;
+      margin: auto;
+    }
 }
