--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,5 @@
 .lead__title {
-  width: 720px;
+  max-width: 720px;
   font-weight: bold;
   font-size: 96px;
   line-height: 100px;
@@ -8,9 +8,16 @@
   text-align: center;
 }
 
+@media screen and (max-width: 680px) {
+  .lead__title {
+    font-size: 60px;
+    line-height: 58px;
+  }
+}
+
 @media screen and (max-width: 425px) {
   .lead__title {
-    width: 288px;
+    max-width: 288px;
     font-size: 40px;
     line-height: 44px;
   }
