--- a/blocks/image-caption/__image/image-caption__image.css
+++ b/blocks/image-caption/__image/image-caption__image.css
@@ -1,22 +1,21 @@
 .image-caption__image {
-  height: 615px;
+  max-width: 984px;
+  max-height: 615px;
   text-align: center;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 1180px) {
   .image-caption__image {
-    height: 580px;
+    max-width: 928px;
+    max-height: 580px;
+    margin: auto;
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 930px) {
   .image-caption__image {
-    height: 480px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .image-caption__image {
-    height: 200px;
+    max-width: 100%;
+    max-height: 480px;
   }
 }
