--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,14 +5,21 @@
   margin: auto;
   padding: 32px 66px 0;
   text-align: center;
-  width: 640px;
+  max-width: 640px;
+}
+
+@media screen and (max-width: 680px) {
+  .lead__subtitle{
+    font-size: 25px;
+    line-height: 125%;
+  }
 }
 
 @media screen and (max-width: 425px) {
   .lead__subtitle{
     font-size: 16px;
     line-height: 125%;
-    width: 288px;
+    max-width: 288px;
     padding: 16px 0 0;
   }
 }
