--- a/blocks/places-list/__place/places-list__place.css
+++ b/blocks/places-list/__place/places-list__place.css
@@ -18,14 +18,14 @@
 @media screen and (max-width: 1180px) {
   .places-list__place {
     column-gap: 32px;
-    grid-template-columns: 440px 456px;
+    grid-template-columns: 440px 1fr;
   }
 }
 
 @media screen and (max-width: 800px) {
   .places-list__place {
     column-gap: 28px;
-    grid-template-columns: 340px 352px;
+    grid-template-columns: 340px 1fr;
   }
 }  
 
