--- a/pages/index.css
+++ b/pages/index.css
@@ -5,7 +5,8 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/lang-links/lang-links.css);
 @import url(../blocks/lang-links/__lang-link/lang-links__lang-link.css);
-@import url(../blocks/lang-links/__lang-link/_lang/lang-links__lang-link_lang-russian.css);
+@import url(../blocks/lang-links/__lang-link/_lang-active/lang-links__lang-link_lang-active.css);
+@import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/image-caption/image-caption.css);
